enter the commit message for your changes. Lines starting

--- a/indes.html
+++ b/indes.html
@@ -5,15 +5,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Esta es una de las paginas de prueba</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div>
         Esta es la hostirla de antonio guzman sanchez <br>
-        Debemos de realizar una nueva asaña
+        Debemos de realizar una nueva asaña tengo una edad de 32 años
     </div>    
     <div>
-        Los estados del tiempo de una persona es que la forma de penstamiento es una <br>
-        
+        Los estados del tiempo de una persona es que la forma de penstamiento es una <br>        
+        Las cosas que uno debe de saber antes de viajar al extrangero <br>  
     </div>
 </body>
 </html>
