--- a/indes.html
+++ b/indes.html
@@ -9,9 +9,13 @@
 </head>
 <body>
     <div>
-        Esta es la hostirla de antonio guzman sanchez <br>
-        Debemos de realizar una nueva asaña tengo una edad de 32 años
-    </div>    
+        
+        <h1>Esta es la historia de antonio guzman sanchez</h1>
+        Debemos de realizar una nueva asaña tengo una edad de 32 años.<br>
+        Como seria la forma de realizar las cosas con mas de una forma<br>
+        de ver la vida, en la mas de las forma de realizar la materia en una forma amorfa <br>
+    </div>   
+    <hr> 
     <div>
         Los estados del tiempo de una persona es que la forma de penstamiento es una <br>        
         Las cosas que uno debe de saber antes de viajar al extrangero <br>  
