--- a/indes.html
+++ b/indes.html
@@ -10,7 +10,7 @@
 <body>
     <div>
         
-        <h1>Esta es la historia de antonio guzman sanchez</h1>
+        <h1>Esta es la vida de antonio guzman sanchez</h1>
         Debemos de realizar una nueva asaña tengo una edad de 32 años.<br>
         Como seria la forma de realizar las cosas con mas de una forma<br>
         de ver la vida, en la mas de las forma de realizar la materia en una forma amorfa <br>
