Commit al master de block version mas resiente

--- a/indes.html
+++ b/indes.html
@@ -8,12 +8,13 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div>
+    <div id= "container">
         
-        <h1>Esta es la vida de antonio guzman sanchez ING SISTEMAS</h1>
-        Debemos de realizar una nueva asaña tengo una edad de 32 años.<br>
+        <h2>Esta es la vida de antonio guzman sanchez ING SISTEMAS</h2>
+        <p> Debemos de realizar una nueva asaña tengo una edad de 32 años.<br>
         Como seria la forma de realizar las cosas con mas de una forma<br>
         de ver la vida, en la mas de las forma de realizar la materia en una forma amorfa <br>
+        </p>
     </div>   
     <hr> 
     <div>
