--- a/indes.html
+++ b/indes.html
@@ -9,17 +9,16 @@
 </head>
 <body>
     <div id= "container">
-        
+        <div id="cabecera">
+            Cabecera
+        </div>
+        <div id="post">
         <h2>Esta es la vida de antonio guzman sanchez ING SISTEMAS</h2>
         <p> Debemos de realizar una nueva asaña tengo una edad de 32 años.<br>
         Como seria la forma de realizar las cosas con mas de una forma<br>
         de ver la vida, en la mas de las forma de realizar la materia en una forma amorfa <br>
         </p>
-    </div>   
-    <hr> 
-    <div>
-        Los estados del tiempo de una persona es que la forma de penstamiento es una <br>        
-        Las cosas que uno debe de saber antes de viajar al extrangero <br>  
-    </div>
+        </div>
+    </div>       
 </body>
 </html>
