--- a/indes.html
+++ b/indes.html
@@ -10,7 +10,10 @@
 <body>
     <div id= "container">
         <div id="cabecera">
-            Cabecera
+            Hyperblog 
+            <span id="tagline">
+                Tu blog de Confianza
+            </span>            
         </div>
         <div id="post">
         <h2>Esta es la vida de antonio guzman sanchez ING SISTEMAS</h2>
