--- a/indes.html
+++ b/indes.html
@@ -15,6 +15,10 @@
         Como seria la forma de realizar las cosas con mas de una forma<br>
         de ver la vida, en la mas de las forma de realizar la materia en una forma amorfa <br>
         </p>
+        <p>
+            Ahora es lo que debe de visitar  con la mas confianza de las cosas den la vida de una de las form ade ser mas valientes 
+            del ser humano
+        </p>
     </div>   
     <hr> 
     <div>
