--- a/indes.html
+++ b/indes.html
@@ -12,7 +12,7 @@
         <div id="cabecera">
             Hyperblog 
             <span id="tagline">
-                Tu blog de Confianza
+                Tu blog  de cebecera
             </span>            
         </div>
         <div id="post">
