--- a/indes.html
+++ b/indes.html
@@ -12,7 +12,7 @@
         <div id="cabecera">
             Hyperblog 
             <span id="tagline">
-                Tu blog de Confianza
+                Tu blog maestro
             </span>            
         </div>
         <div id="post">
@@ -25,6 +25,7 @@
             Ahora es lo que debe de visitar  con la mas confianza de las cosas den la vida de una de las form ade ser mas valientes 
             del ser humano
         </p>
+        <p> Suscribete y dale Like </p>
     </div>   
     <hr> 
     <div>
