LOGO COLOR FONDO

--- a/indes.html
+++ b/indes.html
@@ -10,7 +10,8 @@
 <body>
     <div id= "container">
         <div id="cabecera">
-            Hyperblog 
+            <img  id="logo" src="imagenes/ra.png" alt="">
+            Hyperblog             
             <span id="tagline">
                 Tu blog  de cebecera editado en github 2.0
             </span>            
