El primer commit de Anita

--- a/indes.html
+++ b/indes.html
@@ -18,6 +18,7 @@
         <div id="post">
         <h2>Esta es la vida de antonio guzman sanchez ING SISTEMAS</h2>
         <p> Debemos de realizar una nueva asaña tengo una edad de 32 años.<br>
+        <p> Anita Platzi tiene vida en internet.<br>
         Como seria la forma de realizar las cosas con mas de una forma<br>
         de ver la vida, en la mas de las forma de realizar la materia en una forma amorfa <br>
         </p>
