--- a/indes.html
+++ b/indes.html
@@ -32,5 +32,8 @@
         Los estados del tiempo de una persona es que la forma de penstamiento es una <br>        
         Las cosas que uno debe de saber antes de viajar al extrangero <br>  
     </div>
+    <div id="footer">
+	Hecho con amor en Platzi @@
+    </div>
 </body>
 </html>
